--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,20 +1,28 @@
-version: 2
+version: 2.1
 jobs:
   build:
-    working_directory: ~/
+    working_directory: ~/repo
     docker:
-      - image: circleci/node:8
+      - image: circleci/node:10.16.3
     steps:
       - checkout
+      - run:
+          name: Update NPM
+          command: "sudo npm install -g npm@5"
       - restore_cache:
-          key: npm-cache-v1-{{ checksum "package-lock.json" }}
+          key: dependency-cache-{{ checksum "package-lock.json" }}
       - run:
           name: Install Dependencies
-          command: npm ci
+          command: npm install
       - save_cache:
-          key: npm-cache-v1-{{ checksum "package-lock.json" }}
+          key: dependency-cache-{{ checksum "package-lock.json" }}
           paths:
-            - ~/
+            - ./node_modules
       - run:
-          name: Run Tests
-          command: npm test
+          name: Run tests
+          command: npm run test
+      - run:
+          name: "Collect Coverage Reports"
+          command: npm run test:coverage
+      - store_artifacts:
+          path: coverage
