--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mobi_wallet",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.1",
@@ -55,5 +55,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "coveralls": "^3.1.1"
   }
 }
