--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "deploy": "npm run build && firebase deploy",
     "test:coverage": "react-scripts test --coverage --watchAll=false",
     "test:coverage:w": "react-scripts test --coverage --watchAll=true",
     "eject": "react-scripts eject"
@@ -55,8 +56,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "coveralls": "^3.1.1"
   }
 }
